--- a/02_webpack配置文件(css)/src/css/index.css
+++ b/02_webpack配置文件(css)/src/css/index.css
@@ -1,3 +1,5 @@
+@import "./text.css";
+
 .content{
     /*利用postcss-preset-env将下面颜色属性转换为更多浏览器可以识别的属性值，例如rgba*/
     color: #12345678;
@@ -6,9 +8,4 @@
 
 .content:hover{
     color: deepskyblue;
-}
-
-:fullscreen{
-    /*注意fullscreen这个属性是需要加上浏览器前缀的，使用postcss处理*/
-
 }
